# AITextAssist-cpp

./: AI Text Assistant 项目架构文档.md  CMakeLists.txt  README.md  start.sh  test_conversation_switching.sh
config/: default_config.json
include/common/: types.h
include/config/: config_manager.h
include/core/: assistant.h
include/database/: conversation_db.h
include/llm/: llm_client.h
include/utils/: logger.h
include/web/: http_server.h
src/: main.cpp
src/config/: config_manager.cpp
src/core/: assistant.cpp
src/database/: conversation_db.cpp
src/llm/: llm_client.cpp
src/utils/: logger.cpp
src/web/: http_server.cpp
tests/: CMakeLists.txt  test_config_manager.cpp  test_conversation_db.cpp  test_llm_client.cpp  test_logger.cpp  test_main.cpp
web/: index.html  script.js  style.css
web-nextchat/: enhanced-chat.html  enhanced-chat.html.backup  test-chat.html
